src/test/resources/30/single/xhtml/valid/canvas.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<?oxygen RNGSchema="../../../src/schema/epub-xhtml-30.rnc" type="compact"?>
<?oxygen SCHSchema="../../../src/schema/epub-xhtml-30.sch"?>
<html xmlns="http://www.w3.org/1999/xhtml" xmlns:ssml="http://www.w3.org/2001/10/synthesis" xml:lang="en" lang="en" ssml:alphabet="x-SAMPA">
    <head>
        <title>ssml</title>
    </head>
    <body>
<canvas id="example" width="200" height="200">
<object type="bla/sibla">
<canvas id="example2" width="200" height="200"/>
</object>
This text is displayed if your browser does not support HTML5 Canvas.
</canvas>
    </body>
</html>
