src/test/resources/30/single/xhtml/invalid/svg-links.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="la" lang="la"
	xmlns:epub="http://www.idpf.org/2007/ops">
	<head>
		<title>SVG test</title>
		<link type="text/css" rel="stylesheet" href="lorem.css" />
	</head>
	<body>
		<h1>SVG test</h1>
		<svg width="12cm" height="4cm" viewBox="0 0 1200 400" xmlns="http://www.w3.org/2000/svg"
			version="1.1" xmlns:x="http://www.w3.org/1999/xhtml"
			xmlns:xlink="http://www.w3.org/1999/xlink">
			<title>Rectangle</title>
			<desc>Example rect01 - rectangle with sharp corners </desc>

			<a xlink:href="doc.xhtml" target="ch1">
				<text>link</text>
			</a>
		</svg>
	</body>
</html>
